--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "front end framework for javascript developers",
   "main": "jjs.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Karl Campanella-Dysart",
   "license": "MIT",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-shell": "^1.1.2",
+    "grunt-stonejs": "^0.1.7",
     "gzippo": "^0.2.0",
     "jsdoc": "^3.3.2",
     "mongoose": "^4.1.2",
